tests/paczka1/small_fuzzy/25147498.err
Error in line 2: xTb0Heb S601 89,0
Error in line 9: S888 A850 71,7
